# UniversityCourses-Term7

./: .gitignore  AIPython_Lesson10.ipynb  AIPython_Lesson11.ipynb  AIPython_Lesson12.ipynb  AIPython_Lesson14.ipynb  AIPython_Lesson5.ipynb  AIPython_Lesson7.ipynb  AIPython_Lesson8.ipynb  AIPython_Lesson9.ipynb  README.md
AI Python/: readme.txt
AIPython/: AIPython_Lesson1.ipynb  AIPython_Lesson2.ipynb  AIPython_Lesson3.ipynb  AIPython_Lesson4.ipynb  AIPython_Lesson5.ipynb  AIPython_Lesson6.ipynb
AIPython/lib/: display.py
AppliedPythonProgr/lesson_3/: main.py  tram_data.txt
AppliedPythonProgramming/lesson_1/: main.py
AppliedPythonProgramming/lesson_10/: data.xml  main.py
AppliedPythonProgramming/lesson_11/: main.py
AppliedPythonProgramming/lesson_12/: main.py
AppliedPythonProgramming/lesson_4/: data.txt  main.py  min_max_data.txt
AppliedPythonProgramming/lesson_5/: data.txt  main.py
AppliedPythonProgramming/lesson_6/: main.py
AppliedPythonProgramming/lesson_7/: main.py
FunctionalProgramming/: main.py
ImageProcAndMult/: main.cpp
ImageProcAndMult/rle/: CMakeLists.txt  main.cpp
ImageProcAndMult/rle/src/compression/: rle.cpp  rle.h
ImageProcAndMult/rle/src/utils/: time_tracker.cpp  time_tracker.h
ImageProcessing/: CMakeLists.txt  README.md  main.cpp
LogicProgramming/: README.md  YuriyLisovskiy_task2.pro  task2.pro  task2_test.pro  task_1.pro  task_1_family_tree.pro
NLP/: requirements.txt
lib/: csp_examples.py  display.py  learn_dt.py  learn_linear.py  learn_no_inputs.py  learn_problem.py  logic_problem.py  sg.py  sp.py
(+125 files in other folders)
